Fix table not stretching in Firefox

--- a/css/home.css
+++ b/css/home.css
@@ -173,6 +173,7 @@
   position: relative;
 
   flex: 1;
+  min-width: 100%;
   max-height: var(--table-height);
 
   border-spacing: 0;
